[package]
name = "pluton"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
iced = { version = "0.13.1", default-features = false, features = [
    "auto-detect-theme",
    "fira-sans",
    "wgpu",
    "lazy",
] }
iced_font_awesome = "0.2.0"
pallas = "0.32.0"
thiserror = "2.0.11"
utxorpc = "0.10.0"
