[package]
name = "pluton"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
iced = { version = "0.13.1", default-features = false, features = [
    "auto-detect-theme",
    "fira-sans",
    "wgpu",
    "lazy",
] }
iced_font_awesome = "0.2.0"
pallas = "0.32.0"
sha2 = "0.10.8"
thiserror = "2.0.11"
utxorpc = "0.10.0"
base64 = "0.22"
regex = "1.11"
cryptoxide = "0.5.0"
secp256k1 = { version = "0.30.0", features = ["rand"] }
